# fractalparser

./: .gitignore  README.md  darkmatterbrownies.json  fparse.py  pyproject.toml  test.sh
fractalparser/: fparse.py
