[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractalparser"
version = "0.1.0"
description = "A simple Python package for parsing json to markdown"
authors = [{ name = "vvhg1", email = "victor.hobe.gelting@gmail.com" }]
dependencies = [
    "PyYAML",
]

